tests/baselines/reference/recursiveGenericTypeHierarchy.errors.txt
==== tests/cases/compiler/recursiveGenericTypeHierarchy.ts (4 errors) ====
    // used to ICE
    interface A<T extends A<T, S>, S extends A<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! recursiveGenericTypeHierarchy.ts(2,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~~
!!! recursiveGenericTypeHierarchy.ts(2,32): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    interface B<T extends B<T, S>, S extends B<T, S>> extends A<B<T, S>, B<T, S>> { }
                ~~~~~~~~~~~~~~~~~
!!! recursiveGenericTypeHierarchy.ts(3,13): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                                   ~~~~~~~~~~~~~~~~~
!!! recursiveGenericTypeHierarchy.ts(3,32): error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.